--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@mipmap/splash_bg_newyear"
-    tools:context="com.wangchangzheng.wisdombeijing.SplashActivity">
+    tools:context=".Activitys.SplashActivity">
 
     <ImageView
         android:id="@+id/iv_head"
