--- a/app/src/main/res/layout/left_meu_item_list.xml
+++ b/app/src/main/res/layout/left_meu_item_list.xml
@@ -10,9 +10,9 @@
         android:id="@+id/tv_menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_menu_selector"
+        android:drawableLeft="@drawable/btn_menu_selector"
         android:drawablePadding="5dp"
         android:padding="10dp"
-        android:textSize="23sp"
+        android:textSize="18sp"
         android:textColor="@color/txt_menu_selector"/>
 </LinearLayout>
